# polyprofit

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  config.toml  console-errors.txt  opencode.json  page-snapshot.md  patch.txt
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.ocx/: receipt.jsonc
.playwright-mcp/: page-2026-03-31T10-35-13-182Z.yml  page-2026-03-31T10-36-09-065Z.yml  page-2026-03-31T10-36-48-067Z.yml  page-2026-03-31T10-37-22-850Z.yml  page-2026-03-31T10-38-02-147Z.yml
.serena/: project.yml
.serena/memories/: project_overview.md
.swarm/: hnsw.index  hnsw.metadata.json  memory.db  schema.sql
.todo/: 00_PLAN.md  Cargo.toml.md  config.toml.md  docs.md  frontend.md  main.rs.md  pp-core.md  pp-discovery.md  pp-execution.md  pp-feeds.md  pp-server.md  pp-strategy.md  pp-venue-hyperliquid.md  pp-venue-kalshi.md  pp-venue-polymarket.md  pp-venue.md  pp-wallet.md  pp-whales.md  saas-migration.md
crates/pp-core/: Cargo.toml
crates/pp-core/bindings/: Asset.ts  AssetMeta.ts  MarketKind.ts  Mode.ts  OrderStrategy.ts  PlatformInfo.ts  Price.ts  RuntimeConfig.ts  Side.ts  WhaleActivity.ts  WhaleProfile.ts
crates/pp-core/src/: config.rs  config3.rs  config_tests.rs  db.rs  error.rs  lib.rs  types.rs  types_tests.rs
crates/pp-core/src/db/: checkpoint.rs  config.rs  config_tests.rs  equity.rs  mod.rs  state.rs  state_tests.rs  tables.rs  trades.rs  trades_tests.rs  whales.rs
crates/pp-core/src/jobs/: mod.rs  queue.rs
crates/pp-core/src/models/: market.rs  mod.rs  trade.rs  whale.rs
crates/pp-core/src/models/config/: mod.rs  structures.rs
crates/pp-discovery/: Cargo.toml
crates/pp-discovery/src/: lib.rs  lib_tests.rs
crates/pp-execution/: Cargo.toml
crates/pp-execution/src/: fee_cache.rs  heartbeat.rs  lib.rs  lib_tests.rs  maker_loop.rs  orders.rs  orders_tests.rs  redeem.rs  redeem_tests.rs
crates/pp-feeds/: Cargo.toml
crates/pp-feeds/src/: lib.rs  orderbook.rs  rtds.rs
crates/pp-risk/: Cargo.toml
crates/pp-risk/src/: lib.rs  lib_tests.rs
crates/pp-server/: Cargo.toml
crates/pp-server/bindings/: AssetDefInfo.ts  ConfigSnapshot.ts  PositionInfo.ts  PriceInfo.ts  Tick.ts  TradeInfo.ts
crates/pp-server/src/: api.rs  lib.rs  ws.rs
crates/pp-server/src/api/: admin.rs  auth.rs  config.rs  dto.rs  error.rs  jobs.rs  mod.rs  trading.rs  whales.rs
crates/pp-strategy/: Cargo.toml
crates/pp-strategy/src/: fair_price.rs  fair_price_tests.rs  lib.rs  signal.rs
crates/pp-venue/: Cargo.toml
crates/pp-venue-polymarket/: Cargo.toml
crates/pp-venue-polymarket/src/: lib.rs
crates/pp-venue/bindings/: TokenBalance.ts  VenueId.ts
crates/pp-venue/src/: balance.rs  feed.rs  lib.rs  order.rs
crates/pp-wallet/: Cargo.toml
crates/pp-wallet/src/: lib.rs  polygon.rs
crates/pp-whales/: Cargo.toml
crates/pp-whales/src/: job.rs  lib.rs
docs/: README.md  api.md  architecture.md  fees.md  integration.md  quickstart.md  risks.md  strategy.md
docs/code/: 01-types.md  02-feeds.md  03-discovery.md  04-strategy.md  05-execution.md  06-risk.md  07-server.md  08-main.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/.claude-flow/data/: auto-memory-store.json  graph-state.json  intelligence-snapshot.json  pending-insights.jsonl  ranked-context.json
frontend/.claude-flow/sessions/: current.json  session-1774959444353.json  session-1774969735611.json  session-1774972853463.json  session-1774974207593.json  session-1774975990861.json  undefined.json
frontend/e2e/: fixtures.ts  smoke.spec.ts
frontend/src/: App.css  App.tsx  api.test.ts  api.ts  index.css  matchers.d.ts
frontend/src/components/: Analytics.tsx  Controls.tsx  Dashboard.tsx  EquityCurve.tsx  ExecutionLog.tsx  HeaderBar.tsx  Markets.tsx  PriceMonitor.tsx  Settings.test.tsx  Settings.tsx  TradeFeed.tsx
frontend/src/entities/market/: index.ts  lib.test.ts
frontend/src/entities/position/: index.ts  lib.test.ts
frontend/src/entities/trade/: index.ts  lib.test.ts
frontend/src/entities/whale/: index.ts  lib.test.ts
frontend/src/features/markets-list/: ui.test.tsx  ui.tsx
frontend/src/features/settings-form/: ui.test.tsx  ui.tsx
frontend/src/hooks/: useBot.ts
frontend/src/pages/ConnectPage/: index.tsx
frontend/src/pages/DashboardPage/: index.tsx
frontend/src/pages/SettingsPage/: index.tsx
frontend/src/pages/WalletPage/: index.tsx
frontend/src/pages/WhalesPage/: index.tsx
frontend/src/shared/api/: client.test.ts  client.ts  index.ts  useBot.ts
frontend/src/shared/hooks/: useScanStatus.ts  useSplitResize.ts  useWhales.ts
frontend/src/shared/lib/: format.test.ts  format.ts  i18n.ts
frontend/src/shared/store/: useAppStore.ts
frontend/src/shared/ui/: Badge.test.tsx  Badge.tsx  Button.test.tsx  Button.tsx  Card.test.tsx  Card.tsx  Checkbox.tsx  EmptyState.test.tsx  EmptyState.tsx  IconButton.test.tsx  IconButton.tsx  Input.tsx  Modal.test.tsx  Modal.tsx  Panel.tsx  ResizeDivider.tsx  Select.tsx  Skeleton.test.tsx  Skeleton.tsx  Spinner.test.tsx  Spinner.tsx  Stat.test.tsx  Stat.tsx  Tabs.test.tsx  Tabs.tsx  ToastProvider.tsx  index.ts  useWhaleAlerts.ts
frontend/src/widgets/WhaleTracker/: ActivityTab.tsx  AddWhaleRow.tsx  BulkActionsBar.tsx  ObservedStats.tsx  RecentTradesTable.tsx  RegistryTab.tsx  ScanSettingsModal.tsx  TradeChart.tsx  TradeTooltip.tsx  WhaleDetails.tsx  WhaleRowItem.tsx  index.tsx  types.ts
frontend/src/widgets/dashboard/: ui.tsx
frontend/src/widgets/equity-curve/: ui.test.tsx  ui.tsx
frontend/src/widgets/execution-log/: ui.test.tsx  ui.tsx
frontend/src/widgets/trade-feed/: ui.test.tsx  ui.tsx
scripts/: runtime-smoke.mjs
src/: main.rs
