[package]
name = "pp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
anyhow.workspace = true
parking_lot = "0.12"
toml = "0.8"
