[package]
name = "pp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
anyhow.workspace = true
tokio.workspace = true
parking_lot = "0.12"
tokio-util = "0.7"
toml = "0.8"
redb = "2.4"
ts-rs = { version = "12", features = ["chrono-impl", "serde-json-impl"] }
