[package]
name = "pp-discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
pp-core.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
reqwest.workspace = true
chrono.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
