[package]
name = "pp-execution"
version = "0.1.0"
edition = "2024"

[dependencies]
pp-core.workspace = true
polymarket-client-sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
chrono.workspace = true
dashmap.workspace = true
reqwest.workspace = true
alloy.workspace = true
uuid.workspace = true
