[package]
name = "pp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
pp-core.workspace = true
pp-discovery.workspace = true
pp-whales.workspace = true
pp-wallet.workspace = true
alloy.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
reqwest = { workspace = true, features = ["json"] }
ts-rs = { version = "12", features = ["chrono-impl", "serde-json-impl"] }

