[package]
name = "pp-venue-polymarket"
version = "0.1.0"
edition = "2024"

[dependencies]
pp-core.workspace = true
pp-venue.workspace = true
pp-execution.workspace = true
pp-discovery.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
chrono.workspace = true
alloy.workspace = true
serde.workspace = true
polymarket_sdk.workspace = true
