[package]
name = "pp-whales"
version = "0.1.0"
edition = "2024"

[dependencies]
pp-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
